--- a/hydrogen2D.org
+++ b/hydrogen2D.org
@@ -3,6 +3,30 @@
 #+email: devonw@andrew.cmu.edu
 #+TODO: TODO(t) INPROGRESS(w) | DONE(d) CANCELED(c)
 
+#+BEGIN_SRC python :tangle tester.py
+from ase import Atom, Atoms
+from ase.visualize import view
+from ase.io import write as ase_write
+import numpy as np
+
+
+
+a = 2.46
+a1 = a * np.array([3.0**0.5/2., -1./2., 0.])
+a2 = a * np.array([3.0**0.5/2., 1./2., 0.])
+a3 = np.array([0., 0., 18.])
+
+atoms = Atoms([Atom('C', 1./2. * a3),
+                  Atom('C', 1./3. * a1 + 1./3. * a2 + 1./2. * a3)],
+                  cell=[a1, a2, a3])
+
+
+view(atoms)
+
+#+END_SRC
+
+#+RESULTS:
+
 * Journal
 ** 2016-05-19 Thu
 - cite:zan-2012-graph-reknit Graphene Reknits Its Holes - Zan, Novoselov*
@@ -71,6 +95,7 @@ Possible research idea: Look into pore stability of different passivating molecu
 ** 2016-06-08 Wed
 ** 2016-06-09 Thu
 Prepared for group meeting research update tomorrow.
+
 * Meetings
 ** DONE 2016-03-08 4pm
    CLOSED: [2016-03-09 Wed 09:26] DEADLINE: <2016-03-08 Tue 16:00>
